--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -17,7 +17,7 @@
 		</div>
 		
 		<div class="">
-			<a href="#formContainer" class="text-slate-grey  drop-line wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="0.5s">DROP US A LINE <span class="icon ion-chevron-down d-inline-flex align-items-center justify-content-center"></span>
+			<a href="#contactUs" class="text-slate-grey  drop-line wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="0.5s">DROP US A LINE <span class="icon ion-chevron-down d-inline-flex align-items-center justify-content-center"></span>
 
 			</a>
 		</div>
@@ -25,7 +25,7 @@
 	</div>
 </section>
 <section class="py-5">
-	<div class="container" id="formContainer">
+	<div class="container" id="contactUs">
 		<div class="col-lg-6 col-md-10 offset-md-1 offset-lg-6">
 			<h3 class="medium text-dark-grey mb-5 wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="0.5s">We are always curious about what people want to develop. If you are interested in working with us, let’s chat!</h3>
 			<form class="contact-form">
@@ -71,7 +71,7 @@
 						  	</div>
 						</div>
 						<div class="col-md-6">
-							<button class="btn btn-submit wow fadeInUp" data-wow-delay="1.6s" data-wow-duration="0.5s" type="button " data-toggle="modal" data-target="#thankyouModal">SUBMIT</button>
+							<button class="btn btn-submit wow fadeInUp" data-wow-delay="1.6s" data-wow-duration="0.5s" type="button" data-toggle="modal" data-target="#thankyouModal">SUBMIT</button>
 						</div>
 					</div>
 				</div>
@@ -90,6 +90,14 @@
 	            </div>
 	        </div>
 	    </div>
+	</div>
+</section>
+<section>
+	<div class="container">
+		<div class="text-center">
+				<h3 class="h2 medium text-dark-grey mb-5 wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="0.5s">Find us on the map</h3>
+			</div>
+			<iframe src="https://snazzymaps.com/embed/27006" width="100%" height="800px" style="border:none;" ></iframe>
 	</div>
 </section>
 {% endblock %}
