--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -8,7 +8,7 @@
             <div class="col-md-8 col-lg-7 col-sm-12">
                 <h1 class="h1 medium text-dark-grey mb-4">We’re crafting digital solutions to step up your game</h1>
                 <h2 class="h3 text-slate-grey regular mb-4">We are a swiftkind.</h2>
-                <a href="contact.html" class="medium h4 btn-cta">Get in touch</a>
+                <a href="{% url 'contact' %}" class="medium h4 btn-cta">Get in touch</a>
             </div>
             <div class="col-md-4 col-lg-5 col-xs-5">
                 <img src="{% static 'images/running.svg' %}" class="running d-none d-sm-block">
@@ -166,7 +166,7 @@
                 <p class=" text-dark-grey  wow fadeInUp text-highlight" data-wow-delay="0.2s" data-wow-duration="0.5s">A small team of keen, specialized and diverse people believing that our works could improve people’s daily lives. Fuelled by our passion for our work, we pursue learning to keep up with the best practices and industry standards.
             </p>
                 <div class="h-div  wow fadeInUp" data-wow-delay="0.2s" data-wow-duration="0.5s"></div>
-                <a href="about.html" class=" wow fadeInUp" data-wow-delay="0.8s" data-wow-duration="0.5s">Meet our team</a>
+                <a href="{% url 'about' %}" class=" wow fadeInUp" data-wow-delay="0.8s" data-wow-duration="0.5s">Meet our team</a>
             </div>
         </div>
     </div>
