--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -33,3 +33,20 @@
     	height: 400px;
     }
 }
+
+.team-group{
+    width: 100%;
+    height: 50vh;
+    background: {
+        size:cover;
+        
+        position: top center;
+    }
+    @include mobile{
+        background:{
+            size:contain;
+            repeat:no-repeat;
+        }
+        height: 30vh;
+    }
+}
