--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
     <title>Swiftkind</title>
 </head>
 <body>
-    <nav class="main-nav position-fixed w-100 ">
+    <nav class="main-nav w-100 ">
         <div class="container">
             <div class="navbar navbar-expand-lg">
-                <a href="index.html" class="navbar-brand">
+                <a href="{% url 'index' %}" class="navbar-brand">
                     <img src="{% static 'images/logo-dark.png' %}"
                          srcset="{% static 'images/logo-dark@2x.png' %} 2x,
                                  {% static 'images/logo-dark@3x.png' %} 3x"
@@ -34,16 +34,16 @@
                  <div class="collapse navbar-collapse ml-4  " id="mainNavBar">
                     <ul class="navbar-nav mr-auto">
                         <li class="navbar-item  mx-4">
-                            <a href="about.html" >About us</a>
+                            <a href="{% url 'about' %}" >About us</a>
                         </li>
                         <li class="navbar-item mx-4">
-                            <a href="process.html">Our process</a>
+                            <a href="{% url 'process' %}">Our process</a>
                         </li>
                         <!-- <li class="navbar-item mx-4">
                             <a href="">Projects</a>
                         </li> -->
                     </ul>
-                    <a href="contact.html" class="contact-cta">Talk to us</a>
+                    <a href="{% url 'contact' %}" class="contact-cta">Talk to us</a>
                  </div>
             </div>
         </div>
@@ -51,16 +51,16 @@
     <aside class="sidebar">
         <ul class="navbar-nav mr-auto">
             <li class="navbar-item  mx-4">
-                <a href="index.html" >Home</a>
+                <a href="{% url 'index' %}" >Home</a>
             </li>
             <li class="navbar-item  mx-4">
-                <a href="about.html" >About us</a>
+                <a href="{% url 'about' %}" >About us</a>
             </li>
             <li class="navbar-item mx-4">
-                <a href="process.html">Our process</a>
+                <a href="{% url 'process' %}">Our process</a>
             </li>
             <li class="navbar-item mx-4">
-                <a href="contact.html">Talk to us</a>
+                <a href="{% url 'contact' %}">Talk to us</a>
             </li>
         </ul>
     </aside>
@@ -73,7 +73,7 @@
                 <div class="text-center">
                     <h3 class="h2 medium text-slate-grey mb-4  wow fadeInUp" data-wow-delay="0.4s" data-wow-duration="0.5s">let’s create something amazing!</h3>
                     <p class="text-gunmetal  wow fadeInUp" data-wow-delay="0.6s" data-wow-duration="0.5s">Cliche typewriter stumptown, distillery small batch pok pok normcore crucifix twee. Af banh mi jean shorts, lyft prism vaporware mustache quinoa slow-carb disrupt 8-bit irony lo-fi.</p>
-                    <a href="contact.html" class="btn btn-cta mx-auto  wow fadeInUp" data-wow-delay="0.8s" data-wow-duration="0.5s">Contact us</a>
+                    <a href="{% url 'contact' %}" class="btn btn-cta mx-auto  wow fadeInUp" data-wow-delay="0.8s" data-wow-duration="0.5s">Contact us</a>
                 </div>
             </div>
             <div class="row ">
